[package]
name = "rocket-multipart-form-data"
version = "0.9.5-async"
edition = "2018"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rocket-multipart-form-data"
homepage = "https://magiclen.org/rocket-multipart-form-data"
keywords = ["rocket", "server", "web", "multipart", "form-data"]
categories = ["parser-implementations"]
description = "This crate provides a multipart parser for the Rocket framework."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/rocket-multipart-form-data"
branch = "master"

[dependencies]
rocket = { git ="https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
rocket_http = { git ="https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
mime = "0.3.16"
multipart = { version = "0.17", default-features = false, features = ["server"] }

[dev-dependencies]
rocket-include-static-resources = "0.9"
rocket-raw-response = "0.4"
